# cpp-project-template

./: CMakeLists.txt  README.md
build-release/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  converter_tests  temp_app
include/temperature/: convert.hpp
src/: convert.cpp  main.cpp
test/: run_tests.cpp
